--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -14,7 +14,8 @@
             "libraries/p5.dom.min.js",
             "libraries/p5.sound.min.js",
             "background/background.js"
-        ]
+        ],
+        "persistent": false
     },
 
     "permissions": [
