--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -14,12 +14,12 @@
             "libraries/p5.dom.min.js",
             "libraries/p5.sound.min.js",
             "background/background.js"
-        ],
-        "persistent": false
+        ]
     },
 
     "permissions": [
-        "storage"
+        "storage",
+        "notifications"
     ]
     
 }
