setup persistent storage for todo-list

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -20,7 +20,10 @@
     "permissions": [
         "storage",
         "notifications"
-    ]
-    
+    ],
+   
+    "web_accessible_resources": [
+        "assets/ProductSans/*.tff"
+    ] 
 }
     
