add fallback wallpapers

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -18,8 +18,9 @@
     },
 
     "permissions": [
-        "storage",
-        "notifications"
+        "downloads",
+        "notifications",
+        "storage"
     ],
    
     "web_accessible_resources": [
